--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,8 +12,8 @@ jobs:
       matrix:
         include:
           - image_config: debian
-          - image_config: rocky-linux
-          - image_config: ubuntu
+          # - image_config: rocky-linux
+          # - image_config: ubuntu
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -90,8 +90,8 @@ jobs:
       matrix:
         include:
           - image_config: debian
-          - image_config: rocky-linux
-          - image_config: ubuntu
+          # - image_config: rocky-linux
+          # - image_config: ubuntu
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v4
