--- a/images/rocky-linux.yml
+++ b/images/rocky-linux.yml
@@ -1,5 +1,4 @@
 - imagename: rocky-linux-9-amd64.qcow2
-  arch: amd64
   no-tmpfs: true
   types:
     - qcow2
@@ -8,21 +7,7 @@
   elements:
     - vm
     - rocky-container
-    - cloud-init
-    - autoupdates
-  packages:
-    - qemu-guest-agent
-
-- imagename: rocky-linux-9-arm64.qcow2
-  arch: arm64
-  no-tmpfs: true
-  types:
-    - qcow2
-  environment:
-    DIB_RELEASE: "9"
-  elements:
-    - vm
-    - rocky-container
+    - block-device-efi
     - cloud-init
     - autoupdates
   packages:
