feat: use ubuntu kvm kernel

--- a/images/ubuntu.yml
+++ b/images/ubuntu.yml
@@ -4,6 +4,7 @@
     - qcow2
   environment:
     DIB_RELEASE: noble
+    DIB_UBUNTU_KERNEL: linux-image-kvm
   elements:
     - vm
     - ubuntu-minimal
