--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,7 @@ jobs:
           IMAGE_CONFIG: ${{ matrix.image_config }}
         run: |
           source venv/bin/activate
+          export ELEMENTS_PATH=$PWD/elements
           diskimage-builder images/${IMAGE_CONFIG}.yml
           sha256sum *.qcow2 > ${IMAGE_CONFIG}.sha256
 
