fix: grow root on rocky-linux

--- a/images/rocky-linux.yml
+++ b/images/rocky-linux.yml
@@ -9,6 +9,7 @@
     - rocky-container
     - block-device-efi
     - cloud-init
+    - growroot
     - autoupdates
     - disable-firewall
   packages:
