--- a/images/ubuntu.yml
+++ b/images/ubuntu.yml
@@ -14,6 +14,7 @@
     - cloud-init-datasources
     - autoupdates
     - openssh-server
+    - toolchain
   packages:
     - qemu-guest-agent
     - vim-tiny
